[tool.poetry]
name = "backport"
version = "0.2.0"
description = "Backport various Python libraries (e.g. typing, types, dataclasses)) to old Python versions"
authors = ["Shawn Presser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
include_additional_files = "setup.py,setup_info.py"
major_on_zero = false
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists

[tool.usort]
categories = ["future", "backport", "standard_library", "third_party", "first_party"]
default_category = "third_party"

[tool.usort.known]
backport = ["backport"]

[tool.poetry.urls]
"Shawn's Website" = "https://www.shawwn.com"
"Support me on Patreon" = "https://www.patreon.com/shawwn"
"@theshawwn on Twitter" = "https://www.twitter.com/theshawwn"
"sillysaurusx on Hacker News" = "https://news.ycombinator.com/threads?id=sillysaurusx"
